fix AsciiChar